# x402insurancesolana

./: .dockerignore  .env.example  .env.solana.testnet  .gitignore  =0.10.0  AGENT_DISCOVERY.md  BUG_REPORT.md  COMPLETION_STATUS.md  DEPLOYMENT.md  Dockerfile  FIXES_NEEDED.md  FUTURE_IMPROVEMENTS.md  GET_DEVNET_FUNDS.md  NEXT_STEPS.md  README.md  README_SOLANA.md  SOLANA_UI_ENHANCEMENTS.md  TESTNET_SETUP.md  TESTNET_WALLET_INFO.md  TRANSACTION_BUG_FIX.md  airdrop_sol.py  blockchain.py  blockchain_solana.py  config.py  create_agent_token_account.py  create_demo_transactions.py  database.py  docker-compose.yml  generate_payment.py  payment_verifier_solana.py  pyproject.toml  pytest.ini  request_devnet_airdrop.py  requirements.txt  requirements_solana.txt  server.py  test_real_e2e.py  test_transaction.py
.github/workflows/: ci.yml
anchor_program/: Anchor.toml
anchor_program/programs/x402_attestation/: Cargo.toml
anchor_program/programs/x402_attestation/src/: lib.rs
auth/: payment_verifier.py
docs/: PRODUCTION_SETUP.md  WALLET_SETUP_GUIDE.md
docs/archive/: AGENT_DISCOVERY.md  AGENT_IMPROVEMENTS.md  BUGS_FIXED.md  DEPENDENCIES_INSTALLED.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  POSITIONING.md  QUICK_START_TESTNET.md  blockchain.py  (+4 more)
examples/: agent_buy_policy.py  agent_claim.py  full_demo.sh
scripts/: create_solana_wallet.py
static/: api-docs.html  dashboard.html  dashboard_base_backup.html  story-demo.css  story-demo.js
tests/: README.md  manual_e2e_test.py  manual_transaction_test.py  test_e2e_flow.py
(+4 files in other folders)
