[tool.poetry]
name = "x402-insurance"
version = "2.0.0"
description = "x402 Insurance - API outage protection for AI agents on Solana"
authors = ["x402 Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
solana = "^0.32.0"
solders = "^0.20.0"
httpx = "^0.23.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
pyyaml = "^6.0.1"
PyNaCl = "^1.5.0"
base58 = "^2.1.1"
cryptography = "^41.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W"]
ignore = ["E501"]  # Line too long (handled by black)
